cabal-version:   3.0
name:            gf
version:         0.1.0.0
license:         MIT
author:          satler
maintainer:      satler@satler.dev
build-type:      Simple

common warnings
    ghc-options: -Wall

executable gf
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base,
        smtLib >= 1.1,
        optparse-applicative
    hs-source-dirs:   src
    default-language: Haskell2010
